#114: Add space to avoid overlapping of resource and pagination

--- a/geonode_mapstore_client/client/themes/geonode/less/_resources-catalog.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_resources-catalog.less
@@ -88,3 +88,12 @@
         position: relative;
     }
 }
+
+// Adds space between resource content and pagination
+.ms-resources-grid {
+    .ms-resources-container {
+        .ms-resources-container-grid, .ms-resources-container-list {
+            padding-bottom: 3rem;
+        }
+    }
+}
